<resources>
    <string name="app_name" translatable="false">TDR UTP</string>
    <string name="cable_type" translatable="false">Cable Type</string>
    <string name="none_length" translatable="false">-</string>
    <string name="none">None</string>
    <string name="status">Status</string>
    <string name="return_loss_db">Return Loss(dB)</string>
    <string name="cable_length_m">Cable Length(m)</string>
    <string name="pair">Pair</string>
    <string name="utp_cable_length_measure">UTP Cable Length Measure</string>
    <string name="check">Check</string>
    <string name="cable_diagram">Cable Diagram</string>
    <string name="cam_side">CAM Port</string>
    <string name="nvr_side">NET Port</string>
    <string name="please_wait">Please wait..</string>
    <string name="close">Close</string>
    <string name="invalid" translatable="false">Invalid</string>
    <string name="pair_ok" translatable="false">Pair OK</string>
    <string name="pair_open" translatable="false">Pair Open</string>
    <string name="same_pair_short" translatable="false">Same Pair Short</string>
    <string name="cross_pair_short" translatable="false">Cross Pair Short</string>
    <string name="pair_busy" translatable="false">Pair Busy</string>
    <string name="unmeasurable">Unmeasurable</string>
    <string name="test1">※ Measurable cable length (based on CAT 5E) : 10m ~ 200m</string>
    <string name="text2">Precautions</string>
    <string name="text3">- The measurement result may differ from the official measurement length. Please use it as a reference.</string>
    <string name="text4">- The cable may not be measured if it is shorted arbitrarily or bent excessibely.</string>
    <string name="text5">"- The cable status and length may not be measured if any product is connected to the cable end. "</string>
    <string name="text6">"- When measuring more than 200m, connect TG02 and measure it in the TDRC app. "</string>
    <string name="text7">Cable Status</string>
    <string name="text8">- Pair Open : Nothing is connected to the cable end.</string>
    <string name="text9">- Pair Short : The cable end is short-circuited.</string>
    <string name="text10">- Cross Pair Short : Cables in other pairs are short-circuited.</string>
    <string name="text11">- Same Pair Short : Cables in same pair are short-circuited.</string>
    <string name="text12">- Invalid : Cannot be measured due to unknown reason.</string>
    <string name="_1_2">1 - 2</string>
    <string name="_3_6">3 - 6</string>
    <string name="_4_5">4 - 5</string>
    <string name="_7_8">7 - 8</string>

</resources>
